--- a/btf_types/Cargo.toml
+++ b/btf_types/Cargo.toml
@@ -1,16 +1,8 @@
 [package]
-name = "btf"
+name = "btf_types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "btf_types",
-    "btf_interp"
-]
-
 [dependencies]
-btf_types = { path = "btf_types" }
-btf_interp = { path = "btf_interp" }
