--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ members = [
 [dependencies]
 btf_types = { path = "btf_types" }
 btf_interp = { path = "btf_interp" }
-argh = "0.1"
+structopt = { version = "0.3", features = [ "paw" ] }
+paw = "1.0"
